--- a/public/css/pages/reservations.css
+++ b/public/css/pages/reservations.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    min-height: 100vh;
+    min-height: 100%;
     background-color: var(--color-bg-dark);
     background-image: url('../../../images/reservation-bg.webp');
     background-repeat: no-repeat;
@@ -33,8 +33,6 @@ body::before {
 .reservations-page {
     position: relative;
     z-index: 1;
-    min-height: calc(100vh - 80px);
-    padding-bottom: var(--spacing-8);
 }
 
 /* ===================================
@@ -52,7 +50,9 @@ body::before {
 }
 
 .page-header-content {
-    padding: 0rem 8rem;
+    display: flex;
+    align-items: center;
+    padding: 0rem 2rem;
     max-width: 1400px;
     margin: 0 auto;
 }
@@ -60,7 +60,8 @@ body::before {
 .page-header-text {
     display: flex;
     flex-direction: column;
-    margin-bottom: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .page-title {
@@ -71,6 +72,7 @@ body::before {
     margin-bottom: var(--spacing-2);
     letter-spacing: -0.5px;
     text-transform: uppercase;
+    margin: 0;
 }
 
 .page-subtitle {
@@ -2273,6 +2275,9 @@ body::before {
 /* Wrapper for wizard */
 .booking-wizard-section {
     max-width: 1100px;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     margin: 0 auto var(--spacing-6) auto;
     position: relative;
 }
